==> jnsbyr/esp8266-intexsbh20/src/esp8266-intexsbh20/PureSpaIO.cpp <==
#include "PureSpaIO.h"
#include <ESP8266WiFi.h>
#define DEFAULT_MODEL_NAME "Intex PureSpa SB-H20"
#define DEFAULT_MODEL_NAME "Intex PureSpa SJB-HS"

void PureSpaIO::setup(LANG language)
{
  this->language = language;

  pinMode(PIN::CLOCK, INPUT);
  pinMode(PIN::DATA,  INPUT);
  pinMode(PIN::LATCH, INPUT);

  attachInterruptArg(digitalPinToInterrupt(PIN::CLOCK), PureSpaIO::clockRisingISR, this, RISING);
}

IRAM_ATTR void PureSpaIO::clockRisingISR(void* arg)
{
  bool data = !digitalRead(PIN::DATA);
  bool enabled = !digitalRead(PIN::LATCH);

  if (enabled || isrState.receivedBits == (FRAME::BITS - 1))
  {
    isrState.frameValue = (isrState.frameValue << 1) + data;
    isrState.receivedBits++;

    if (isrState.receivedBits == FRAME::BITS)
    {
      state.frameCounter++;
      if (isrState.frameValue == FRAME_TYPE::CUE)
      {
        // cue frame, ignore
        //DEBUG_MSG("\nC");
      }
      else if (isrState.frameValue & FRAME_TYPE::DIGIT)
      {
        // display frame
        //DEBUG_MSG("\nD");
        decodeDisplay();
      }
      else if (isrState.frameValue & FRAME_TYPE::LED)
      {
        // LED frame
        //DEBUG_MSG("\nL");
        decodeLED();
      }
      else if (isrState.frameValue & FRAME_TYPE::BUTTON)
      {
        // button frame
        //DEBUG_MSG("\nB");
        decodeButton();
      }
      else if (isrState.frameValue != 0)
      {
        // unsupported frame
        //DEBUG_MSG("\nU");
      }

      isrState.receivedBits = 0;
    }
  }
  else
  {
    //DEBUG_MSG(" %d ", receivedBits);
    isrState.receivedBits = 0;
    state.frameCounter++;
  }
}

IRAM_ATTR inline void PureSpaIO::decodeButton()
{
  if (isrState.frameValue & FRAME_BUTTON::FILTER)
  {
    //DEBUG_MSG("F");
    updateButtonState(buttons.toggleFilter);
  }
  else if (isrState.frameValue & FRAME_BUTTON::HEATER)
  {
    //DEBUG_MSG("H");
    updateButtonState(buttons.toggleHeater);
  }
  else if (isrState.frameValue & FRAME_BUTTON::BUBBLE)
  {
    //DEBUG_MSG("B");
    updateButtonState(buttons.toggleBubble);
  }
  else if (isrState.frameValue & FRAME_BUTTON::POWER)
  {
    //DEBUG_MSG(" P");
    updateButtonState(buttons.togglePower);
  }
  else if (isrState.frameValue & FRAME_BUTTON::TEMP_UP)
  {
    //DEBUG_MSG("U");
    updateButtonState(buttons.toggleTempUp);
  }
  else if (isrState.frameValue & FRAME_BUTTON::TEMP_DOWN)
  {
    //DEBUG_MSG("D");
    updateButtonState(buttons.toggleTempDown);
  }
#ifdef MODEL_SJB_HS
  else if (isrState.frameValue & FRAME_BUTTON::DISINFECTION)
  {
    updateButtonState(buttons.toggleDisinfection);
  }
  else if (isrState.frameValue & FRAME_BUTTON::JET)
  {
    updateButtonState(buttons.toggleJet);
  }
#endif
  else if (isrState.frameValue & FRAME_BUTTON::TEMP_UNIT)
  {
    //DEBUG_MSG("T");
  }
  else
  {
    //DEBUG_MSG(" B%x", frameValue);
  }

  if (isrState.reply)
  {
    // delay around 5 µs relative to rising edge of latch signal before pulsing
    // pulse should be around 2 µs and MUST be completed BEFORE next falling edge of clock
#if F_CPU == 160000000L
    delayMicroseconds(1);
    pinMode(PIN::DATA, OUTPUT);
    delayMicroseconds(3);
    pinMode(PIN::DATA, INPUT);
#else
    #error 160 MHz CPU frequency required! Pulse timing not possible at 80 MHz, because the code above takes too long to reach this point.
    // at least using Arduino methods
#endif
    isrState.reply = false;
  }
}
