==> Hatles/esp32-purespa/main/purespa/PureSpaIO.cpp <==
#include "PureSpaIO.h"
#include <esp_timer.h>
#include <rom/ets_sys.h>
#include <math.h>
#include "freertos/FreeRTOS.h"
#include "freertos/task.h"
#include "esp_log.h"
#define DEFAULT_MODEL_NAME "Intex PureSpa SB-H20"
#define DEFAULT_MODEL_NAME "Intex PureSpa SJB-HS"

void PureSpaIO::setup(LANG language)
{
  this->language = language;

  // Configure CLOCK as Interrupt Input (Rising Edge)
  gpio_config_t io_conf = {};
  io_conf.intr_type = GPIO_INTR_POSEDGE;
  io_conf.pin_bit_mask = (1ULL << PIN::CLOCK);
  io_conf.mode = GPIO_MODE_INPUT;
  io_conf.pull_up_en = GPIO_PULLUP_DISABLE;
  io_conf.pull_down_en = GPIO_PULLDOWN_DISABLE;
  gpio_config(&io_conf);

  // Configure LATCH as Interrupt Input (Falling Edge)
  io_conf.intr_type = GPIO_INTR_POSEDGE;
  io_conf.pin_bit_mask = (1ULL << PIN::LATCH);
  gpio_config(&io_conf);

  // Configure DATA as Input
  io_conf.intr_type = GPIO_INTR_DISABLE;
  io_conf.pin_bit_mask = (1ULL << PIN::DATA);
  gpio_config(&io_conf);

  gpio_install_isr_service(0);
  gpio_isr_handler_add(PIN::CLOCK, PureSpaIO::clockRisingISR, this);
  //gpio_isr_handler_add(PIN::LATCH, PureSpaIO::latchRisingISR, this);
}

IRAM_ATTR void PureSpaIO::clockRisingISR(void* arg)
{
  bool data = !gpio_get_level(PIN::DATA);
  bool enabled = !gpio_get_level(PIN::LATCH);

  if (enabled || isrState.receivedBits == (FRAME::BITS - 1))
  {
    isrState.frameValue = (isrState.frameValue << 1) + data;
    isrState.receivedBits = isrState.receivedBits + 1;

    if (isrState.receivedBits == FRAME::BITS)
    {
      state.frameCounter = state.frameCounter + 1;
      if (isrState.frameValue == FRAME_TYPE::CUE)
      {
      }
      else if (isrState.frameValue & FRAME_TYPE::DIGIT)
      {
        decodeDisplay();
      }
      else if (isrState.frameValue & FRAME_TYPE::LED)
      {
        decodeLED();
      }
      else if (isrState.frameValue & FRAME_TYPE::BUTTON)
      {
        decodeButton();
      }
      else if (isrState.frameValue != 0)
      {
      }

      isrState.receivedBits = 0;
    }
  }
  else
  {
    isrState.receivedBits = 0;
    state.frameDropped = state.frameDropped + 1;
    state.frameCounter = state.frameCounter + 1;
  }
}

IRAM_ATTR void PureSpaIO::decodeButton()
{
  if (isrState.frameValue & FRAME_BUTTON::FILTER)
  {
    updateButtonState(buttons.toggleFilter);
  }
  else if (isrState.frameValue & FRAME_BUTTON::HEATER)
  {
    updateButtonState(buttons.toggleHeater);
  }
  else if (isrState.frameValue & FRAME_BUTTON::BUBBLE)
  {
    updateButtonState(buttons.toggleBubble);
  }
  else if (isrState.frameValue & FRAME_BUTTON::POWER)
  {
    updateButtonState(buttons.togglePower);
  }
  else if (isrState.frameValue & FRAME_BUTTON::TEMP_UP)
  {
    updateButtonState(buttons.toggleTempUp);
  }
  else if (isrState.frameValue & FRAME_BUTTON::TEMP_DOWN)
  {
    updateButtonState(buttons.toggleTempDown);
  }

  if (isrState.reply)
  {
    delayMicroseconds(1);
    gpio_set_level(PIN::DATA, 0); // Explicitly pull low
    gpio_set_direction(PIN::DATA, GPIO_MODE_OUTPUT);
    delayMicroseconds(2);
    gpio_set_direction(PIN::DATA, GPIO_MODE_INPUT);
    isrState.reply = false;
  }
}
